--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "config": "^1.27.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "images-scraper": "^2.0.11",
     "jimp": "^0.2.28",
